feat: first part of third part in second an20 homework

--- a/courses/an20/homework/ha02.tex
+++ b/courses/an20/homework/ha02.tex
@@ -6,6 +6,7 @@
 \usepackage[shortlabels]{enumitem}
 \usepackage{hyperref}
 \usepackage[utf8]{inputenc}
+\usepackage{pdflscape}
 \usepackage{mathtools}
 \usepackage{physics}
 \usepackage{tabularx}
@@ -127,7 +128,113 @@ Begründen Sie Ihre Antworten.
 
 \section*{Hausaufgabe 2}
 
+\newpage
 \section*{Hausaufgabe 3}
+
+Ermitteln Sie größtmögliche Intervalle $I \in \mathbb{R}$ auf denen
+die folgenden Ausdrücke $f(x)$ Stammfunktionen besitzen.
+Berechnen Sie zughörige Stammfenktionen $F: I \to \mathbb{R}$ durch
+Anwendung des Hauptsatzes. \\
+\textbf{Hinweis:} Substitutionsmethode oder partielle Integration anwenden!
+
+\begin{enumerate}[(i)]
+\item Ermitteln Sie Stammfunktionen der folgenden Ausdrücke $f(x)$ auf größtmöglichen
+  Intervallen $I \in \mathbb{R}$
+  \begin{enumerate}[a)]
+  \item $f(x) \coloneqq x \exp(3x)$
+
+    $\mathbb{D}_f = \mathbb{R}$
+
+    $u'(x) = \exp(3x), u(x) = \frac{1}{3} \exp(3x), v(x) = x l, v'(x) = 1$
+    \begin{align*}
+      \int f(x)\,dx &= u(x) \cdot v(x) - \int v'(x) \cdot u(x) \,dx \\
+                    &= \frac{1}{3} \exp(3x) \cdot x  - \int 1 \cdot \frac{1}{3}\exp(3x) \,dx \\
+                    &= \frac{1}{3} \exp(3x) \cdot x  - \frac{1}{3} \int \exp(3x) \,dx \\
+                    &= \frac{1}{3} \exp(3x) \cdot x  - \frac{1}{9} \exp(3x) \\
+                    &= \frac{1}{9} \cdot 3 \cdot \exp(3x) \cdot x  - \frac{1}{9} \exp(3x) \\
+      F(x) &= \frac{1}{9} \exp(3x) (3x - 1), x \in \mathbb{R}
+    \end{align*}
+  \item $f(x) \coloneqq \cos(\ln x) + \sin(\ln x)$
+
+    $\mathbb{D}_f = \mathbb{R}_{>0}$
+
+    Zuerst wird die Funktion aufgeteilt in $g(x) = \cos(\ln(x))$ und $h(x) = \sin(\ln(x))$.
+    Damit lässt sich $f(x) = \cos(\ln(x)) + \sin(\ln(x))$ als $f(x) = g(x) + h(x)$ schreiben.
+    Das unbestimmte Integral $\int f(x)\,dx$ wird nun zu der Summe $\int g(x)dx + \int h(x)dx$.
+
+    \newpage
+    \begin{landscape}
+      \begin{enumerate}[(i)]
+        \item \textbf{Integration von $g(x) = \cos(\ln(x))$ per Substitution}
+          \begin{flalign*}
+            u &= \ln(x) \iff e^u = e^{\ln(x)} = x & \\
+            du &= \frac{1}{x}dx & \\
+            dx &= x \cdot du = e^u \cdot du
+          \end{flalign*}
+          \begin{flalign*}
+            G(x) &= \int \cos(\ln(x))dx \overset{\substack{\text{Substitution} \\ u = \ln(x)}}= \int \cos(u) e^udu &
+          \end{flalign*}
+          \begin{flalign*}
+            \int \cos(u) e^udu \overset{\substack{\text{Partielle}\\\text{Integration}}}
+                                &= e^u \cos(u) -\underset{\makebox[0pt]{$\displaystyle \left(e^u (-\sin(u)) - \int e^u (-\cos(u))du\right)$}}
+                                  {\underbrace{\int e^u (-\sin(u))du}} &\\
+                                &= e^u \cos(u) - \left(e^u (-\sin(u)) + \int e^u \cos(u)du\right) &\\
+                                &= e^u \cos(u) + e^u \sin(u) - \int e^u \cos(u)du && | + \int e^u \cos(u)du &\\
+            2 \int \cos(u) e^udu &= e^u \cos(u) + e^u \sin(u) && | :2 &\\
+                                &= \frac{e^u \cos(u) + e^u \sin(u)}{2} &\\
+            \overset{\text{Substituiere } u = \ln(x)}&=  \frac{e^{\ln(x)} \cos(\ln(x)) + e^{\ln(x)} \sin(\ln(x))}{2} &\\
+            G(x) &= \frac{x (\cos(\ln(x)) + \sin(\ln(x)))}{2}
+          \end{flalign*}
+        \newpage 
+        \item \textbf{Integration von $h(x) = \sin(\ln(x))$ per Substitution}
+          \begin{flalign*}
+            u &= \ln(x) \iff e^u = e^{\ln(x)} = x & \\
+            du &= \frac{1}{x}dx & \\
+            dx &= x \cdot du = e^u \cdot du
+          \end{flalign*}
+          \begin{flalign*}
+            H(x) &= \int \sin(\ln(x))dx \overset{\substack{\text{Substitution} \\ u = \ln(x)}}= \int \sin(u) e^udu &
+          \end{flalign*}
+          \begin{flalign*}
+            \int \sin(u) e^udu \overset{\substack{\text{Partielle}\\\text{Integration}}}
+                                &= e^u \sin(u) -\underset{\makebox[0pt]{$\displaystyle \left(e^u \cos(u) - \int e^u (-\sin(u))du\right)$}}
+                                  {\underbrace{\int e^u \cos(u)du}} &\\
+                                &= e^u \sin(u) - \left(e^u \cos(u) - \int e^u (-\sin(u))du\right) &\\
+                                &= e^u \sin(u) - e^u \cos(u) - \int e^u \sin(u)du && | + \int e^u \sin(u)du &\\
+            2 \int \sin(u) e^udu &= e^u \sin(u) - e^u \cos(u) && | :2 &\\
+                                &= \frac{e^u \sin(u) - e^u \cos(u)}{2} &\\
+            \overset{\text{Substituiere } u = \ln(x)}&=  \frac{e^{\ln(x)} \sin(\ln(x)) - e^{\ln(x)} \cos(\ln(x))}{2} &\\
+            H(x) &= \frac{x (\sin(\ln(x)) - \cos(\ln(x)))}{2}
+          \end{flalign*}
+      \end{enumerate}
+    \end{landscape}
+
+    \begin{flalign*}
+      F(x) &= G(x) + H(x) &\\
+           &= \frac{x (\cos(\ln(x)) + \sin(\ln(x)))}{2} + \frac{x (\sin(\ln(x)) - \cos(\ln(x)))}{2} &\\
+           &= x \cdot \frac{\cos(\ln(x)) + \sin(\ln(x)) + \sin(\ln(x)) - \cos(\ln(x))}{2} &\\
+           &= x \cdot \sin(\ln(x)), x \in \mathbb{R}_{>0}
+    \end{flalign*}
+  \item $f(x) \coloneqq \frac{\ln x}{x^3}$
+
+    $\mathbb{D} = \mathbb{R}_{>0}$
+
+    $u'(x) = x^{-3}, u(x) = -\frac{1}{2}x^{-2}, v(x) = \ln(x), v'(x) = \frac{1}{x}$
+    \begin{align*}
+      \int f(x)\,dx &= u(x) \cdot v(x) - \int v'(x) \cdot u(x) \,dx \\
+                    &= -\frac{1}{2} x^{-2} \cdot \ln(x) - \int \frac{1}{x} \cdot \left(-\frac{1}{2} x^{-2}\right) \,dx \\
+                    &= -\frac{1}{2} x^{-2} \cdot \ln(x) - \int -\frac{1}{2} x^{-3} \,dx \\
+                    &= -\frac{1}{2} x^{-2} \cdot \ln(x) - \frac{1}{4} x^{-2} \,dx \\
+      F(x) &= -\frac{1}{2} x^{-2} (ln(x) + \frac{1}{2}), x \in \mathbb{R}_{>0}
+    \end{align*}
+  \end{enumerate}
+\item Stellen Sie für die folgenden Integrale
+  \[
+    F_v(x) \coloneqq \int_1^x t \ln^n(t) \,dt, x \in (0, \infty)
+  \]
+  eine Rekursionsformel bzgl. $n \in \mathbb{N}$ auf.
+  Geben Sie explizite Darstellungen von $F_0, F_1, F_2$ an.
+\end{enumerate}
 
 \newpage
 \section*{Hausaufgabe 4}
