--- a/courses/an20/homework/ha02.tex
+++ b/courses/an20/homework/ha02.tex
@@ -92,7 +92,8 @@ Begründen Sie Ihre Antworten.
   Somit ist die Funktion auf dem kompakten Intervall $[-1, 1]$ stetig und
   besitzt auf diesem Intervall eine Stammfunktion.
   Damit ist die Aussage wahr.
-  
+
+\newpage
 \item Die Funktion $f(x) \coloneqq \text{sign}(x) \sqrt{\abs{x + \frac{1}{2}}}, x \in [-1,1]$, besitzt
   auf $[-1,1]$ eine Stammfunktion.
 
@@ -143,6 +144,22 @@ Anwendung des Hauptsatzes. \\
   \begin{enumerate}[a)]
   \item $f(x) \coloneqq x \exp(3x)$
 
+    \label{dia:3.1.a}
+    \begin{tikzpicture}
+      \begin{axis}[
+          axis lines=middle,
+          xmax = 1.1,
+          xmin = -1.1,
+          ymax = 9,
+          ymin = -0.8]
+        \addplot [
+          domain=-2:2,
+          name path=f,
+          samples=100,
+          very thick, blue]{x * exp(3 * x)};
+      \end{axis}
+    \end{tikzpicture}
+
     $\mathbb{D}_f = \mathbb{R}$
 
     $u'(x) = \exp(3x), u(x) = \frac{1}{3} \exp(3x), v(x) = x l, v'(x) = 1$
@@ -154,33 +171,38 @@ Anwendung des Hauptsatzes. \\
                     &= \frac{1}{9} \cdot 3 \cdot \exp(3x) \cdot x  - \frac{1}{9} \exp(3x) \\
       F(x) &= \frac{1}{9} \exp(3x) (3x - 1), x \in \mathbb{R}
     \end{align*}
-  \item $f(x) \coloneqq \cos(\ln x) + \sin(\ln x)$
 
-    $\mathbb{D}_f = \mathbb{R}_{>0}$
+  \newpage
+  \begin{landscape}
+    \item $f(x) \coloneqq \cos(\ln x) + \sin(\ln x)$
+      \begin{flalign*}
+        & \makebox[\textwidth]{} & %% This little hack ensures, that the whole width is used.
+      \end{flalign*}
 
-    Zuerst wird die Funktion aufgeteilt in $g(x) = \cos(\ln(x))$ und $h(x) = \sin(\ln(x))$.
-    Damit lässt sich $f(x) = \cos(\ln(x)) + \sin(\ln(x))$ als $f(x) = g(x) + h(x)$ schreiben.
-    Das unbestimmte Integral $\int f(x)\,dx$ wird nun zu der Summe $\int g(x)dx + \int h(x)dx$.
+      \label{dia:3.1.b}
+      \begin{tikzpicture}
+        \begin{axis}[
+            axis lines=middle,
+            xmax = 570,
+            xmin = -50,
+            ymax = 1.6,
+            ymin = -1.6,]
+          \addplot [
+            domain=1:600,
+            name path=f,
+            samples=100,
+            very thick, blue]{cos(deg(ln(x))) + sin(deg(ln(x)))};
+        \end{axis}
+      \end{tikzpicture}
 
-    \label{dia:1.2}
-    \begin{tikzpicture}
-      \begin{axis}[
-          axis lines=middle,
-          xmax = 570,
-          xmin = -50,
-          ymax = 1.6,
-          ymin = -1.6,]
-        \addplot [
-          domain=1:600,
-          name path=f,
-          samples=100,
-          very thick, blue]{cos(deg(ln(x))) + sin(deg(ln(x)))};
-      \end{axis}
-    \end{tikzpicture}
+      $\mathbb{D}_f = \mathbb{R}_{>0}$
 
-    \newpage
-    \begin{landscape}
-      \begin{enumerate}[(i)]
+      Zuerst wird die Funktion aufgeteilt in $g(x) = \cos(\ln(x))$ und $h(x) = \sin(\ln(x))$.
+      Damit lässt sich $f(x) = \cos(\ln(x)) + \sin(\ln(x))$ als $f(x) = g(x) + h(x)$ schreiben.
+      Das unbestimmte Integral $\int f(x)\,dx$ wird nun zu der Summe $\int g(x)dx + \int h(x)dx$.
+
+      \newpage
+      \begin{enumerate}[b) (i)]
         \item \textbf{Integration von $g(x) = \cos(\ln(x))$ per Substitution}
           \begin{flalign*}
             u &= \ln(x) \iff e^u = e^{\ln(x)} = x & \\
@@ -223,33 +245,39 @@ Anwendung des Hauptsatzes. \\
             H(x) &= \frac{x (\sin(\ln(x)) - \cos(\ln(x)))}{2}
           \end{flalign*}
       \end{enumerate}
+
+      \begin{flalign*}
+        F(x) &= G(x) + H(x) &\\
+             &= \frac{x (\cos(\ln(x)) + \sin(\ln(x)))}{2} + \frac{x (\sin(\ln(x)) - \cos(\ln(x)))}{2} &\\
+             &= x \cdot \frac{\cos(\ln(x)) + \sin(\ln(x)) + \sin(\ln(x)) - \cos(\ln(x))}{2} &\\
+             &= x \cdot \sin(\ln(x)), x \in \mathbb{R}_{>0}
+      \end{flalign*}
+      \begin{flalign*}
+        & \makebox[\textwidth]{} & %% This little hack ensures, that the whole width is used.
+      \end{flalign*}     
+    \item $f(x) \coloneqq \frac{\ln x}{x^3}$
+
+      $\mathbb{D} = \mathbb{R}_{>0}$
+
+      $u'(x) = x^{-3}, u(x) = -\frac{1}{2}x^{-2}, v(x) = \ln(x), v'(x) = \frac{1}{x}$
+      \begin{align*}
+        \int f(x)\,dx &= u(x) \cdot v(x) - \int v'(x) \cdot u(x) \,dx \\
+                      &= -\frac{1}{2} x^{-2} \cdot \ln(x) - \int \frac{1}{x} \cdot \left(-\frac{1}{2} x^{-2}\right) \,dx \\
+                      &= -\frac{1}{2} x^{-2} \cdot \ln(x) - \int -\frac{1}{2} x^{-3} \,dx \\
+                      &= -\frac{1}{2} x^{-2} \cdot \ln(x) - \frac{1}{4} x^{-2} \,dx \\
+        F(x) &= -\frac{1}{2} x^{-2} (ln(x) + \frac{1}{2}), x \in \mathbb{R}_{>0}
+      \end{align*}
     \end{landscape}
-
-    \begin{flalign*}
-      F(x) &= G(x) + H(x) &\\
-           &= \frac{x (\cos(\ln(x)) + \sin(\ln(x)))}{2} + \frac{x (\sin(\ln(x)) - \cos(\ln(x)))}{2} &\\
-           &= x \cdot \frac{\cos(\ln(x)) + \sin(\ln(x)) + \sin(\ln(x)) - \cos(\ln(x))}{2} &\\
-           &= x \cdot \sin(\ln(x)), x \in \mathbb{R}_{>0}
-    \end{flalign*}
-  \item $f(x) \coloneqq \frac{\ln x}{x^3}$
-
-    $\mathbb{D} = \mathbb{R}_{>0}$
-
-    $u'(x) = x^{-3}, u(x) = -\frac{1}{2}x^{-2}, v(x) = \ln(x), v'(x) = \frac{1}{x}$
-    \begin{align*}
-      \int f(x)\,dx &= u(x) \cdot v(x) - \int v'(x) \cdot u(x) \,dx \\
-                    &= -\frac{1}{2} x^{-2} \cdot \ln(x) - \int \frac{1}{x} \cdot \left(-\frac{1}{2} x^{-2}\right) \,dx \\
-                    &= -\frac{1}{2} x^{-2} \cdot \ln(x) - \int -\frac{1}{2} x^{-3} \,dx \\
-                    &= -\frac{1}{2} x^{-2} \cdot \ln(x) - \frac{1}{4} x^{-2} \,dx \\
-      F(x) &= -\frac{1}{2} x^{-2} (ln(x) + \frac{1}{2}), x \in \mathbb{R}_{>0}
-    \end{align*}
   \end{enumerate}
+
+\newpage
 \item Stellen Sie für die folgenden Integrale
   \[
     F_v(x) \coloneqq \int_1^x t \ln^n(t) \,dt, x \in (0, \infty)
   \]
   eine Rekursionsformel bzgl. $n \in \mathbb{N}$ auf.
   Geben Sie explizite Darstellungen von $F_0, F_1, F_2$ an.
+
 \end{enumerate}
 
 \newpage
