--- a/courses/an20/homework/ha02.tex
+++ b/courses/an20/homework/ha02.tex
@@ -20,7 +20,7 @@
 \usepgfplotslibrary{fillbetween}
 
 
-\author{}
+\author{Albina Oscherowa \\ Lukas Kamratzki \\ Karsten Lehmann}
 \date{SoSe 2021}
 \title{Hausaufgabe 02 Analysis - Weiterführende Konzepte}
 
